# weather_scaper

./: .gitignore  README.md  pyproject.toml
data/: NWS_SCRAPE_2025-07-24.csv
src/: main.py  weather_scraper.py
