[project]
name = "weather-scraper"
version = "0.1.0"
description = "Scraping weather data from nws"
authors = [
    {name = "MartynJJ",email = "mj.jepson@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "src.main:main"
